refactor auth API and update swagger doc
