# go-flow-gateway/docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/auth/line-callback": {
             "get": {
-                "description": "Handler the redirect from Line Login",
+                "description": "Handler the redirect from Line Login and set user session",
                 "tags": [
                     "Auth"
                 ],
@@ -18,15 +18,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "code",
+                        "description": "Authorization code returned from Line Login",
                         "name": "code",
                         "in": "query",
                         "required": true
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "ok",
+                    "302": {
+                        "description": "Redirect URL",
                         "schema": {
                             "type": "string"
                         }
@@ -37,13 +37,16 @@
         "/auth/line-login": {
             "get": {
                 "description": "Redirect to Line Login",
+                "produces": [
+                    "text/html"
+                ],
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Line Login",
                 "responses": {
                     "302": {
-                        "description": "ok",
+                        "description": "Redirect URL",
                         "schema": {
                             "type": "string"
                         }
@@ -90,11 +93,8 @@
                 ],
                 "summary": "Logout",
                 "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
+                    "204": {
+                        "description": "No content"
                     }
                 }
             }
